--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: helm-chart
+name: chart
 description: A Helm chart of helm charts for Fabrik8 Deployments
 type: application
 version: 1.0.0
