--- a/charts/generic/Chart.yaml
+++ b/charts/generic/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: chart
-description: A Helm chart of helm charts for Fabrik8 Deployments
+description: A Helm chart of helm charts for Generic Fabrik8 Deployments
 type: application
 version: 1.0.0
 appVersion: "latest"
